syntax = "proto3";

option go_package = "./proto";
package example;

service Greeter {
    rpc SayHello (HelloRequest) returns (HelloReply);
    rpc StreamStockPrices(StockRequest) returns (stream StockResponse);
    rpc StreamStockPricesClient (stream StockRequestT) returns (StockResponseT);
}

message HelloRequest {
    string name = 1;
}

message HelloReply {
    string message = 1;
}



message StockRequest {
    string stock_symbol = 1;
}

message StockResponse {
    string stock_symbol = 1;
    float price = 2;
    string timestamp = 3;
}

message StockRequestT {
  string stock_symbol = 1;
  float price = 2;
}

message StockResponseT {
  string message = 1;
}